--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                 .then(data => {
                     if (data.detections && data.detections.length > 0) {
                         let detectionDetails = data.detections.map(d => {
-                            return `Prediction results: ${d.class.replace(/_/g, " ") } <br>Accuracy: ${d.confidence.toFixed(2)}`;
+                            return `Prediction results: ${d.class.replace(/_/g, " ") } <br>Confidence: ${d.confidence.toFixed(2)}`;
                         }).join("<br>"); // Join with <br> for line breaks
                         messageElem.innerHTML = `Detected: <br>${detectionDetails}`; // Use innerHTML to support HTML tags like <br>
                     } else {
